# exam_gtk_front

./: .gitignore  main.cpp  meson.build  run.sh  test.sh
.cache/clangd/index/: main.cpp.B6C66BD53B3E419E.idx  main.cpp.F042D2C219DC3FA7.idx
generators/: FakeQuestionGenerator.cpp
generators/include/: FakeQuestionGenerator.h  IQuestionGenerator.h  LocalQuestionGenerator.h
include/: FakeQuestionGenerator.h  IQuestion.h  IQuestionGenerator.h  MultiChoiceQuestion.h  stdafx.h
models/: ExamSettings.cpp  bla.cpp
models/include/: Exam.h  ExamSettings.h  IQuestion.h  MultiChoiceQuestion.h  UserSettings.h  bla.h
src/: FakeQuestionGenerator.cpp  MultiChoiceQuestion.cpp
test/: Exam.cpp  meson.build
types/: ExamTypes.h
utility/: LocalAiConnection.cpp
utility/include/: IAiConnection.h  LocalAiConnection.h
